--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
 
     </div>
-
+<p class="mt-5 mb-3 " style="color:rgb(255, 253, 208); position: absolute; bottom:8px; right:16px;" >&copy; By Piyush Gupta</p>
   </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
